--- a/app/src/main/res/navigation/my_nav_graph.xml
+++ b/app/src/main/res/navigation/my_nav_graph.xml
@@ -30,5 +30,13 @@
         android:id="@+id/detailFragment"
         android:name="com.example.news.presentation.view.DetailFragment"
         android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        tools:layout="@layout/fragment_detail" >
+
+        <argument
+            android:name="article"
+            app:argType="com.example.news.data.remote.model.Articles" />
+<!--            app:nullable="true"-->
+<!--            android:defaultValue="@null"-->
+
+    </fragment>
 </navigation>
