--- a/app/src/main/res/drawable/circle_button.xml
+++ b/app/src/main/res/drawable/circle_button.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#c20586"
-    >
-    <item>
-        <shape android:shape="oval">
-            <solid android:color="#C4C4C4"/>
-        </shape>
-    </item>
-</ripple>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <solid android:color="@color/grey" />
+    <corners android:radius="10dp" />
+</shape>
