--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -16,16 +16,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:id="@+id/btn_back"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:drawableStart="@drawable/baseline_arrow_back_24"
+        android:padding="20dp"
         android:background="@drawable/circle_button"
-        android:text="back"
-        android:padding="7dp"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:shadowColor="@color/white"/>
+
+    <ImageView
+        android:id="@+id/more_button"
+        android:layout_width="35dp"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/baseline_more_vert_24"
+        android:background="@drawable/circle_button"/>
 
 
 <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
@@ -36,10 +49,22 @@
 <!--        android:layout_marginEnd="20dp"-->
 <!--        android:background="@drawable/circle_button"-->
 <!--        android:text="back" />-->
-
+<androidx.cardview.widget.CardView
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="10dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/detail_media"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_marginTop="-30dp"
+    android:padding="5dp">
     <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_media"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,64 +75,56 @@
             android:id="@+id/constraint_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="30dp"
+            android:padding="5dp"
+
             >
 
-        <TextView
-            android:id="@+id/detail_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:fontFamily="@font/inter_bold"
-            android:textAlignment="viewStart"
-            android:textColor="@color/black"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/constraint_layout"
-            app:layout_constraintTop_toTopOf="@id/constraint_layout" />
+            <TextView
+                android:id="@+id/detail_title"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:fontFamily="@font/inter_bold"
+                android:textAlignment="viewStart"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@id/constraint_layout"
+                app:layout_constraintTop_toTopOf="@id/constraint_layout" />
 
         <TextView
             android:id="@+id/detail_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text=""
             android:fontFamily="@font/inter_bold"
             android:textAlignment="viewEnd"
             android:textColor="@color/blue"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="14sp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintEnd_toEndOf="@id/constraint_layout"
             app:layout_constraintTop_toBottomOf="@+id/detail_title" />
 
         <TextView
             android:id="@+id/detail_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
             android:fontFamily="@font/inter_bold"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
             android:text=""
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout"
             app:layout_constraintTop_toBottomOf="@+id/detail_author" />
 
         <TextView
             android:id="@+id/detail_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginTop="5dp"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout"
             app:layout_constraintTop_toBottomOf="@+id/detail_content" />
 
         <TextView
@@ -115,16 +132,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
             android:fontFamily="@font/inter_bold"
             android:text="Read more..."
             android:textAlignment="viewEnd"
             android:textColor="@color/blue"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@id/constraint_layout"
             app:layout_constraintTop_toBottomOf="@+id/detail_description" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+</androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
